--- a/src/css/common.css
+++ b/src/css/common.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
+    'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
@@ -15,4 +15,30 @@ body {
 img {
   display: block;
   max-width: 100%;
+}
+
+.timer {
+  display: flex;
+  justify-content: center;
+  color: #212121;
+  border-radius: 2px;
+}
+
+.field {
+  min-width: 120px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.value {
+  display: flex;
+  justify-content: center;
+  font-family: 'Azeret Mono', monospace;
+  font-size: 60px;
+}
+
+.label {
+  display: flex;
+  justify-content: center;
+  font-size: 30px;
 }
